Finetune API schemas
